--- a/app/templates/myproject/register_notification.html
+++ b/app/templates/myproject/register_notification.html
@@ -1,5 +1,5 @@
 <h2>Notification Registration</h2>
 <form method="POST" class="post-form">{% csrf_token %}
     {{form.as_p}}
-    <buttons type="submit" class="save btn btn-default">Save</button>
+    <button type="submit" class="save btn btn-default">Save</button>
 </form>
