--- a/app/templates/myproject/account_list.html
+++ b/app/templates/myproject/account_list.html
@@ -6,14 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        tr{
+            color:white;
+            background-color:#090F34;
+            
+        }
+        th{
+            color:#090F34;
+            background-color:#42E0FF;  
+            padding-right:3%;
+            width:40%;
+        }
+    </style>
 </head>
 <table>
-    <th>
-        <td>Account name</td>
-        <td>Account number</td>
-        <td>Account balance</td>
+    <table class="table" style="width: 50rem;">
+    <tr>
+        <th>Account name</th>
+        <th>Account number</th>
+        <th>Account balance</th>
 
-    </th>
+    </tr>
     {%for account in accounts%}
     <tr>
         <td>{{account.account_name}}</td>
