--- a/app/templates/myproject/card_list.html
+++ b/app/templates/myproject/card_list.html
@@ -6,14 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        tr{
+            color:white;
+            background-color:#090F34;
+            
+        }
+        th{
+            color:#090F34;
+            background-color:#42E0FF;  
+            padding-right:2%;
+            width:45%;
+        }
+    </style>
 </head>
 <table>
-    <th>
-        <td>Wallet</td>
-        <td>Account</td>
-        <td>Issuer</td>
+    <table class="table" style="width: 50rem;">
+    <tr>
+        <th>Wallet</th>
+        <th>Account</th>
+        <th>Issuer</th>
 
-    </th>
+    </tr>
     {%for cad in cards%}
     <tr>
         <td>{{cad.wallet}}</td>
