--- a/app/templates/myproject/currency_list.html
+++ b/app/templates/myproject/currency_list.html
@@ -5,19 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Currency</title>
+    <style>
+        
+        tr{
+            color:white;
+            background-color:#090F34;
+            
+        }
+        th{
+            color:#090F34;
+            background-color:#42E0FF;  
+            padding-right:2%;
+            width:75%;
+        }
+    </style>
 </head>
 <table>
+    <table class="table" style="width: 50rem;">
     <tr>
-        <td>Country</td>
-        <td>Symbol</td>
+        <th>Country</th>
+        <th>Symbol</th>
         
 
     </tr>
     {%for currency in currencies%}
     <tr>
-        <th>{{currency.country}}</th>
-        <th>{{currency.symbol}}</th>
+        <td>{{currency.country}}</td>
+        <td>{{currency.symbol}}</td>
         
     </tr>
     {% endfor %}
