--- a/app/templates/myproject/customers_list.html
+++ b/app/templates/myproject/customers_list.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        tr{
+            color:white;
+            background-color:#090F34;
+            
+        }
+        th{
+            color:#090F34;
+            background-color:#42E0FF;  
+            padding-right:2%;
+            width:45%;
+        }
+    </style>
 </head>
     <table>
         <table class="table" style="width: 50rem;">
