--- a/app/templates/myproject/notification_list.html
+++ b/app/templates/myproject/notification_list.html
@@ -6,19 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
+
+    <style>
+        tr{
+            color:white;
+            background-color:#090F34;
+            
+        }
+        th{
+            color:#090F34;
+            background-color:#42E0FF;  
+            padding-right:2%;
+            width:45%;
+        }
+    </style>
 </head>
 <table>
-    <tr>
-        <td>Date</td>
-        <td>Receipt</td>
-        <td>Message</td>
+    <table>
+        <table class="table" style="width: 50rem;">
+        <th>Date</th>
+        <th>Receipt</th>
+        <th>Message</th>
 
     </tr>
     {%for notification in notifications%}
     <tr>
-        <th>{{notification.date}}</th>
-        <th>{{notification.receipt}}</th>
-        <th>{{notification.message}}</th>
+        <td>{{notification.date}}</td>
+        <td>{{notification.receipt}}</td>
+        <td>{{notification.message}}</td>
     </tr>
     {% endfor %}
 </table>
