--- a/app/templates/myproject/account_profile.html
+++ b/app/templates/myproject/account_profile.html
@@ -7,37 +7,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
 
-    <style>
-        tr{
-            color:white;
-            background-color:#090F34;
-            
-        }
-        th{
-            color:#090F34;
-            background-color:#42E0FF;  
-            padding-right:2%;
-            width:45%;
-        }
-    </style>
 </head>
-<table>
-    <table>
-        <table class="table" style="width: 50rem;">
-        <th>Date</th>
-        <th>Receipt</th>
-        <th>Message</th>
-        
+<body>
+    <h1>Account name:{{account.account_name}}</h1>
+    <h3>Account number:{{account.account_number}}</h3>
+    <h3>Account type:{{account.account_type}}</h3>
+    <h3>Account balance:{{account.account_balance}}</h3>
+    <h3>Wallet:{{account.wallet}}</h3>
+    <a href="{% url 'edit_account' id=account.id %}">Edit Account</a>
 
-    </tr>
-    {%for notification in notifications%}
-    <tr>
-        <td>{{notification.date}}</td>
-        <td>{{notification.receipt}}</td>
-        <td>{{notification.message}}</td>
-    </tr>
-    {% endfor %}
-</table>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
