--- a/app/templates/myproject/transaction_profile.html
+++ b/app/templates/myproject/transaction_profile.html
@@ -7,40 +7,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
 
-    <style>
-        tr{
-            color:white;
-            background-color:#090F34;
-            
-        }
-        th{
-            color:#090F34;
-            background-color:#42E0FF;  
-            padding-right:2%;
-            width:45%;
-        }
-    </style>
 </head>
-<table>
-    <table>
-        <table class="table" style="width: 50rem;">
-        <th>Date</th>
-        <th>Receipt</th>
-        <th>Message</th>
-        
+<body>
+    <h1>{{transaction.message}}</h1>
+    <h3>Wallet:{{transaction.wallet}}</h3>
+    <h3>Description:{{transaction.transaction_description}}</h3>
+    <h3>Amount:{{transaction.transaction_amount}}</h3>
+    <h3>Transaction fee:{{transaction.transaction_charge}}</h3>
+    <h3>Type of transaction:{{transaction.transaction_type}}</h3>
+    <h3>Receipt:{{transaction.receipt}}</h3>
+    
+    <h3>Origin Account:{{transaction.origin_account}}</h3>
+    <h3>Destination account:{{transaction.destination_account}}</h3>
+    
+    <a href="{% url 'edit_transaction' id=transaction.id %}">Edit Transaction</a>
 
-    </tr>
-    {%for notification in notifications%}
-    <tr>
-        <td>{{notification.date}}</td>
-        <td>{{notification.receipt}}</td>
-        <td>{{notification.message}}</td>
-    </tr>
-    {% endfor %}
-</table>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
+
