--- a/app/templates/myproject/customers_list.html
+++ b/app/templates/myproject/customers_list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
-    <style>
+    {% comment %} <style>
         tr{
             color:white;
             background-color:#090F34;
@@ -18,12 +18,33 @@
             padding-right:2%;
             width:100%;
         }
+    </style> {% endcomment %}
+
+    <style>
+        #table {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+          }
+          th,td{
+            border: 1px solid #ddd;
+            padding: 8px;
+          }
+          tr {background-color: #C5B4E3;}
+          tr:hover {background-color:pink;}
+          th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #AA336A;
+            color: white;
+          }
     </style>
 </head>
 
 <header>
-    <table>
-        <table class="table" style="width: 50rem;">
+    {% comment %} <table id="table"> {% endcomment %}
+        <table class="table" style="width: 100rem;" id="table">
     <tr>
         <th>First name</th>
         <th>Age</th>
