--- a/app/templates/myproject/card_list.html
+++ b/app/templates/myproject/card_list.html
@@ -7,26 +7,42 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
     <style>
-        tr{
-            color:white;
-            background-color:#090F34;
-            
-        }
-        th{
-            color:#090F34;
-            background-color:#42E0FF;  
-            padding-right:2%;
-            width:45%;
-        }
+        #table {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+          }
+          th,td{
+            border: 1px solid #ddd;
+            padding: 8px;
+          }
+          tr {background-color: pink;}
+          tr:hover {background-color:#C5B4E3;}
+          th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            {% comment %} text-align: left; {% endcomment %}
+            background-color: #AA336A;
+            color: white;
+            font-weight:bold;
+          }
+
+          a{
+            color: blue;
+          }
+
+          a:hover{
+            color: #AA336A;
+          }
     </style>
 </head>
 <table>
-    <table class="table" style="width: 50rem;">
+    <table class="table">
     <tr>
         <th>Wallet</th>
         <th>Account</th>
         <th>Issuer</th>
-        <th>Link/<th>
+        <th>Link<th>
 
     </tr>
     {%for card in cards%}
